--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -26,9 +26,11 @@
             document.getElementById('result').innerHTML = "tweetしました";
         }
 
-        function button2Pressed() {
+        $().ready(function () {
             doSelect();
-        }
+        });
+
+
         function button3Pressed() {
             doSearch();
         }
@@ -80,13 +82,10 @@
     tweet:<input id="tf2" type="textfield">
     <button onclick="button1Pressed()">tweet</button>
     <br>
-    <button onclick="button2Pressed()">X</button>
-    <br>
-    <input id="search" type="textfield">
+    <input id="tf3" type="textfield">
     <button onclick="button3Pressed()">検索</button>
-
-    <br>
-    <p id="result"></p>
+    <hr>
+    <p id="result">xxxx</p>
 </body>
 
 </html>
