--- a/05/ex5-2.html
+++ b/05/ex5-2.html
@@ -27,9 +27,12 @@
         }
 
         $().ready(function () {
-            doSelect();
+            setInterval(tick, 2000);
         });
 
+        function tick() {
+            doSelect();
+        }
 
         function button3Pressed() {
             doSearch();
