--- a/06Userv2/usertop.html
+++ b/06Userv2/usertop.html
@@ -10,15 +10,17 @@
     <script type="text/javascript" src="../osql.js"></script>
 
     <script>
-    </script>
+
+            </script>
 
 </head>
 
+
 <body>
     <h1>ユーザトップ</h1>
-    <p id="welcome">ようこそxxさん</p>
+    <p id="welcome">ようこそ<sql>tf1</sql>さん</p>
     <hr>
-
+    <p><a href="update.html">ユーザー情報変更</a></p>
 </body>
 
 </html>
